Load and configure project fonts

--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: 'SF Pro Text';
   src: url('../assets/fonts/SFProText-Regular.ttf') format('truetype');
-  font-weight: 400;
+  font-weight: normal;
   font-display: swap;
 }
 
