--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,3 +27,12 @@ h6 {
 code {
   font-family: $code-font-family;
 }
+
+.App {
+  display: flex;
+
+  & > div:nth-child(2) {
+    width: 100%;
+    height: 100%;
+  }
+}
