refactor: change color code to match design

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,12 +1,12 @@
 $primary: #121adb;
 
-$warning: #cc9202;
+$warning: #f7c544;
 
 $error: #ed3434;
 
-$success: #10451d;
+$success: #04bf43;
 
-$info: #03045e;
+$info: #8ecae6;
 
 $black: #040e33;
 
