--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,7 +4,7 @@
 @mixin button-color($color) {
   background: fade-out($color, 0.8);
   border-color: fade-out($color, 0.8);
-  color: $color;
+  color: darken($color, 20%);
 
   svg {
     path {
@@ -12,7 +12,8 @@
     }
   }
 
-  &:hover, *:active {
+  &:hover,
+  *:active {
     background: fade-out($color, 0.7);
     border-color: fade-out($color, 0.7);
   }
