--- a/src/components/ScheduleCard/ScheduleCard.module.scss
+++ b/src/components/ScheduleCard/ScheduleCard.module.scss
@@ -32,7 +32,7 @@
   justify-content: space-between;
   gap: 1rem;
   border-radius: 0.625rem;
-  padding: 0.625rem;
+  padding: 0.5rem;
 }
 
 .card__info {
@@ -42,17 +42,19 @@
     font-size: 0.625rem;
     font-weight: 500;
     margin-bottom: 0.5rem;
+    line-height: 0.75rem;
   }
 
   div {
     font-size: 0.5rem;
+    line-height: 0.625rem;
   }
 }
 
 .card__avatars {
   display: inline-flex;
   direction: rtl;
-  text-align: left; 
+  text-align: left;
   padding-left: 35px;
 
   .avatar {
