fix: use flex-end instead to resolve mixed support
WARNING
autoprefixer: end value has mixed support, consider flex-end instead

--- a/src/components/TaskCard/TaskCard.module.scss
+++ b/src/components/TaskCard/TaskCard.module.scss
@@ -105,7 +105,7 @@
 .task_item__footer {
   display: flex;
   justify-content: space-between;
-  align-items: end;
+  align-items: flex-end;
   gap: 0.5rem;
   font-size: 0.5rem;
   font-weight: 500;
